--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <main>
         <header id="header">
-            <img src="https://cdn.freelogodesign.org/files/22cd7f7888994e7a9bf2bf1e40c1825c/thumb/logo_200x200.png?v=638291715630000000" alt="RasQuokka" id="header-img">
+            <div>
+                <img src="https://cdn.freelogodesign.org/files/22cd7f7888994e7a9bf2bf1e40c1825c/thumb/logo_200x200.png?v=638291715630000000" alt="RasQuokka" id="header-img">
+            </div>
             <nav id="nav-bar">
                 <ul>
                     <li>
@@ -31,7 +35,7 @@
         </section>
         <section id="Características"></section>
         <section id="Función">
-            <iframe id="videoS" width="560" height="315" src="https://www.youtube.com/embed/b_J9gqwHfEE?si=ALO3iTclwCvaXGFi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/b_J9gqwHfEE?si=ALO3iTclwCvaXGFi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
         <section id="Precios"></section>
 
