--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -33,7 +34,35 @@
                 <input type="submit" id="submit" value="Enviar">
             </form>
         </section>
-        <section id="Características"></section>
+        <section id="Características">
+            <div class="grid">
+                <div class="icono">
+                    <i class="fas fa-user" style="color: #e91c1c;"></i>
+                </div>
+                <div class="descripción">
+                   <h2>Diseño Centrado en el Usuario</h2>
+                   <p>Un buen desarrollador web se preocupa por la experiencia del usuario. Esto implica crear diseños atractivos y funcionales que sean fáciles de navegar, accesibles y atractivos para el público objetivo. Se enfocan en la usabilidad y la interacción intuitiva para brindar una experiencia positiva a los visitantes del sitio web.</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icono">
+                    <i class="fa fa-code"></i>
+                </div>
+                <div class="descripción">
+                   <h2>Código de Alta Calidad</h2>
+                   <p> Un desarrollador web experto se esfuerza por escribir un código limpio, eficiente y seguro. Esto garantiza que el sitio web funcione sin problemas, sea fácil de mantener y esté protegido contra posibles vulnerabilidades.</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icono">
+                    <i class="fas fa-solid fa-database" style="color: #f02828;"></i>
+                </div>
+                <div class="descripción">
+                   <h2>Gestión de Datos Efectiva</h2>
+                   <p>: Los desarrolladores web se encargan de la gestión de datos en un sitio web. Esto incluye la creación y administración de bases de datos, así como la implementación de sistemas de almacenamiento y recuperación de información eficientes para garantizar un rendimiento óptimo y una experiencia de usuario fluida.</p>
+                </div>
+            </div>
+        </section>
         <section id="Función">
             <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/b_J9gqwHfEE?si=ALO3iTclwCvaXGFi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
