--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap">
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <main>
         <header id="header">
             <div>
-                <img src="https://cdn.freelogodesign.org/files/22cd7f7888994e7a9bf2bf1e40c1825c/thumb/logo_200x200.png?v=638291715630000000" alt="RasQuokka" id="header-img">
+                <img src="https://cdn.freelogodesign.org/files/22cd7f7888994e7a9bf2bf1e40c1825c/thumb/logo_200x200.png?v=638291715630000000"
+                    alt="RasQuokka" id="header-img">
             </div>
             <nav id="nav-bar">
                 <ul>
@@ -40,8 +43,11 @@
                     <i class="fas fa-user" style="color: #e91c1c;"></i>
                 </div>
                 <div class="descripción">
-                   <h2>Diseño Centrado en el Usuario</h2>
-                   <p>Un buen desarrollador web se preocupa por la experiencia del usuario. Esto implica crear diseños atractivos y funcionales que sean fáciles de navegar, accesibles y atractivos para el público objetivo. Se enfocan en la usabilidad y la interacción intuitiva para brindar una experiencia positiva a los visitantes del sitio web.</p>
+                    <h2>Diseño Centrado en el Usuario</h2>
+                    <p>Un buen desarrollador web se preocupa por la experiencia del usuario. Esto implica crear diseños
+                        atractivos y funcionales que sean fáciles de navegar, accesibles y atractivos para el público
+                        objetivo. Se enfocan en la usabilidad y la interacción intuitiva para brindar una experiencia
+                        positiva a los visitantes del sitio web.</p>
                 </div>
             </div>
             <div class="grid">
@@ -49,8 +55,10 @@
                     <i class="fa fa-code"></i>
                 </div>
                 <div class="descripción">
-                   <h2>Código de Alta Calidad</h2>
-                   <p> Un desarrollador web experto se esfuerza por escribir un código limpio, eficiente y seguro. Esto garantiza que el sitio web funcione sin problemas, sea fácil de mantener y esté protegido contra posibles vulnerabilidades.</p>
+                    <h2>Código de Alta Calidad</h2>
+                    <p> Un desarrollador web experto se esfuerza por escribir un código limpio, eficiente y seguro. Esto
+                        garantiza que el sitio web funcione sin problemas, sea fácil de mantener y esté protegido contra
+                        posibles vulnerabilidades.</p>
                 </div>
             </div>
             <div class="grid">
@@ -58,16 +66,62 @@
                     <i class="fas fa-solid fa-database" style="color: #f02828;"></i>
                 </div>
                 <div class="descripción">
-                   <h2>Gestión de Datos Efectiva</h2>
-                   <p>: Los desarrolladores web se encargan de la gestión de datos en un sitio web. Esto incluye la creación y administración de bases de datos, así como la implementación de sistemas de almacenamiento y recuperación de información eficientes para garantizar un rendimiento óptimo y una experiencia de usuario fluida.</p>
+                    <h2>Gestión de Datos Efectiva</h2>
+                    <p>Los desarrolladores web se encargan de la gestión de datos en un sitio web. Esto incluye la
+                        creación y administración de bases de datos, así como la implementación de sistemas de
+                        almacenamiento y recuperación de información eficientes para garantizar un rendimiento óptimo y
+                        una experiencia de usuario fluida.</p>
                 </div>
             </div>
         </section>
         <section id="Función">
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/b_J9gqwHfEE?si=ALO3iTclwCvaXGFi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe id="video" width="560" height="315"
+                src="https://www.youtube.com/embed/b_J9gqwHfEE?si=ALO3iTclwCvaXGFi" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </section>
-        <section id="Precios"></section>
-
+        <section id="Precios">
+            <div class="producto">
+                <div class="servicio">Desarrollo de un Sitio Web Empresarial</div>
+                <h2></h2>
+                <ol>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+                <button>Seleccionar</button>
+                <div class="producto">
+                    <div class="servicio">Desarrollo de una Aplicación Web Personalizada</div>
+                    <h2></h2>
+                    <ol>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ol>
+                    <button>Seleccionar</button>
+                </div>
+                <div class="producto">
+                    <div class="servicio">Mantenimiento y Actualización de Sitios Web</div>
+                    <h2></h2>
+                    <ol>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ol>
+                    <button>Seleccionar</button>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <ul>
+                <li>Privasidad</li>
+                <li>Terminos</li>
+                <li>Contacto</li>
+            </ul>
+            <span>Propiedad RasQuokka</span>
+        </footer>
     </main>
 </body>
+
 </html>
