--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <main>
+    <main id="envoltura">
         <header id="header">
-            <div>
-                <img src="https://cdn.freelogodesign.org/files/22cd7f7888994e7a9bf2bf1e40c1825c/thumb/logo_200x200.png?v=638291715630000000"
+            <div id="logo">
+                <img src="https://cdn.freelogodesign.org/files/22cd7f7888994e7a9bf2bf1e40c1825c/thumb/logo_200x200.png?v=638295230530000000"
                     alt="RasQuokka" id="header-img">
             </div>
             <nav id="nav-bar">
@@ -31,12 +31,15 @@
                 </ul>
             </nav>
         </header>
-        <section>
+        <div id="contenedor"></div>
+        <section id="hero">
+            <h2>Deja tu email y te contactamos.</h2>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
                 <input type="email" name="email" id="email" placeholder="xxxx@gmail.com" required>
-                <input type="submit" id="submit" value="Enviar">
+                <input type="submit" id="submit" value="Enviar" class="btn">
             </form>
         </section>
+        <div id="contenedor"></div>
         <section id="Características">
             <div class="grid">
                 <div class="icono">
@@ -44,9 +47,12 @@
                 </div>
                 <div class="descripción">
                     <h2>Diseño Centrado en el Usuario</h2>
-                    <p>Un buen desarrollador web se preocupa por la experiencia del usuario. Esto implica crear diseños
-                        atractivos y funcionales que sean fáciles de navegar, accesibles y atractivos para el público
-                        objetivo. Se enfocan en la usabilidad y la interacción intuitiva para brindar una experiencia
+                    <p>Un buen desarrollador web se preocupa por la experiencia del usuario. Esto implica crear
+                        diseños
+                        atractivos y funcionales que sean fáciles de navegar, accesibles y atractivos para el
+                        público
+                        objetivo. Se enfocan en la usabilidad y la interacción intuitiva para brindar una
+                        experiencia
                         positiva a los visitantes del sitio web.</p>
                 </div>
             </div>
@@ -56,8 +62,10 @@
                 </div>
                 <div class="descripción">
                     <h2>Código de Alta Calidad</h2>
-                    <p> Un desarrollador web experto se esfuerza por escribir un código limpio, eficiente y seguro. Esto
-                        garantiza que el sitio web funcione sin problemas, sea fácil de mantener y esté protegido contra
+                    <p> Un desarrollador web experto se esfuerza por escribir un código limpio, eficiente y seguro.
+                        Esto
+                        garantiza que el sitio web funcione sin problemas, sea fácil de mantener y esté protegido
+                        contra
                         posibles vulnerabilidades.</p>
                 </div>
             </div>
@@ -69,7 +77,8 @@
                     <h2>Gestión de Datos Efectiva</h2>
                     <p>Los desarrolladores web se encargan de la gestión de datos en un sitio web. Esto incluye la
                         creación y administración de bases de datos, así como la implementación de sistemas de
-                        almacenamiento y recuperación de información eficientes para garantizar un rendimiento óptimo y
+                        almacenamiento y recuperación de información eficientes para garantizar un rendimiento
+                        óptimo y
                         una experiencia de usuario fluida.</p>
                 </div>
             </div>
@@ -84,32 +93,34 @@
         <section id="Precios">
             <div class="producto">
                 <div class="servicio">Desarrollo de un Sitio Web Empresarial</div>
-                <h2></h2>
+                <h2> $700</h2>
                 <ol>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li> Un sitio web profesional y totalmente funcional para tu empresa o negocio.</li>
+                    <li> Optimización para dispositivos móviles y la integración con sistemas de gestión de
+                        contenido
+                    </li>
+                    <li> Diseño de la interfaz de usuario, la implementación de características específicas</li>
                 </ol>
-                <button>Seleccionar</button>
+                <button class="btn">Seleccionar</button>
                 <div class="producto">
                     <div class="servicio">Desarrollo de una Aplicación Web Personalizada</div>
-                    <h2></h2>
+                    <h2> $5,000 </h2>
                     <ol>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li> Diseño de la arquitectura.</li>
+                        <li> Programación del front-end y el back-end.</li>
+                        <li> Implementación de bases de datos, seguridad y pruebas exhaustivas.</li>
                     </ol>
-                    <button>Seleccionar</button>
+                    <button class="btn">Seleccionar</button>
                 </div>
                 <div class="producto">
                     <div class="servicio">Mantenimiento y Actualización de Sitios Web</div>
                     <h2></h2>
                     <ol>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li> Servicios de mantenimiento y actualización para sitios web existentes.</li>
+                        <li> Corrección de errores, optimización de rendimiento, actualización de contenido.</li>
+                        <li> Aplicación de parches de seguridad y la integración de nuevas características.</li>
                     </ol>
-                    <button>Seleccionar</button>
+                    <button class="btn">Seleccionar</button>
                 </div>
             </div>
         </section>
@@ -121,6 +132,7 @@
             </ul>
             <span>Propiedad RasQuokka</span>
         </footer>
+        </div>
     </main>
 </body>
 
