--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -11,27 +11,26 @@
 </head>
 
 <body>
+    <header id="header">
+        <div id="logo">
+            <img src="./RasQ-removebg-preview.png"
+                alt="RasQuokka" id="header-img">
+        </div>
+        <nav id="nav-bar">
+            <ul>
+                <li>
+                    <a href="#Características" class="nav-link">Características</a>
+                </li>
+                <li>
+                    <a href="#Función" class="nav-link">Función</a>
+                </li>
+                <li>
+                    <a href="#Precios" class="nav-link">Precios</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main id="envoltura">
-        <header id="header">
-            <div id="logo">
-                <img src="https://cdn.freelogodesign.org/files/22cd7f7888994e7a9bf2bf1e40c1825c/thumb/logo_200x200.png?v=638295230530000000"
-                    alt="RasQuokka" id="header-img">
-            </div>
-            <nav id="nav-bar">
-                <ul>
-                    <li>
-                        <a href="#Características" class="nav-link">Características</a>
-                    </li>
-                    <li>
-                        <a href="#Función" class="nav-link">Función</a>
-                    </li>
-                    <li>
-                        <a href="#Precios" class="nav-link">Precios</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <div id="contenedor"></div>
         <section id="hero">
             <h2>Deja tu email y te contactamos.</h2>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
