--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -13,7 +13,7 @@
 <body>
     <header id="header">
         <div id="logo">
-            <img src="./RasQ-removebg-preview.png"
+            <img src="./RasQ2-removebg-preview.png"
                 alt="RasQuokka" id="header-img">
         </div>
         <nav id="nav-bar">
