--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -32,7 +32,7 @@
     </header>
     <main id="envoltura">
         <section id="hero">
-            <h2>Deja tu email y te contactamos.</h2>
+            <h2>Deja tu email y te contactamos</h2>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
                 <input type="email" name="email" id="email" placeholder="xxxx@gmail.com" required>
                 <input type="submit" id="submit" value="Enviar" class="btn">
