--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -19,13 +19,13 @@
         <nav id="nav-bar">
             <ul>
                 <li>
-                    <a href="#Características" class="nav-link">Características</a>
+                    <a href="#características" class="nav-link">Características</a>
                 </li>
                 <li>
-                    <a href="#Función" class="nav-link">Función</a>
+                    <a href="#función" class="nav-link">Función</a>
                 </li>
                 <li>
-                    <a href="#Precios" class="nav-link">Precios</a>
+                    <a href="#precios" class="nav-link">Precios</a>
                 </li>
             </ul>
         </nav>
@@ -38,11 +38,10 @@
                 <input type="submit" id="submit" value="Enviar" class="btn">
             </form>
         </section>
-        <div id="contenedor"></div>
-        <section id="Características">
+        <section id="características">
             <div class="grid">
                 <div class="icono">
-                    <i class="fas fa-user" style="color: #e91c1c;"></i>
+                    <i class="fas fa-user"></i>
                 </div>
                 <div class="descripción">
                     <h2>Diseño Centrado en el Usuario</h2>
@@ -82,14 +81,14 @@
                 </div>
             </div>
         </section>
-        <section id="Función">
+        <section id="función">
             <iframe id="video" width="560" height="315"
                 src="https://www.youtube.com/embed/b_J9gqwHfEE?si=ALO3iTclwCvaXGFi" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </section>
-        <section id="Precios">
+        <section id="precios">
             <div class="producto">
                 <div class="servicio">Desarrollo de un Sitio Web Empresarial</div>
                 <h2> $700</h2>
