mejoras con grid

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -13,8 +13,7 @@
 <body>
     <header id="header">
         <div id="logo">
-            <img src="./RasQ2-removebg-preview.png"
-                alt="RasQuokka" id="header-img">
+            <img src="./RasQ2-removebg-preview.png" alt="RasQuokka" id="header-img">
         </div>
         <nav id="nav-bar">
             <ul>
@@ -97,29 +96,30 @@
                     <li> Optimización para dispositivos móviles y la integración con sistemas de gestión de
                         contenido
                     </li>
-                    <li> Diseño de la interfaz de usuario, la implementación de características específicas</li>
+                    <li> Diseño de la interfaz de usuario, la implementación de características específicas.</li>
                 </ol>
                 <button class="btn">Seleccionar</button>
-                <div class="producto">
-                    <div class="servicio">Desarrollo de una Aplicación Web Personalizada</div>
-                    <h2> $5,000 </h2>
-                    <ol>
-                        <li> Diseño de la arquitectura.</li>
-                        <li> Programación del front-end y el back-end.</li>
-                        <li> Implementación de bases de datos, seguridad y pruebas exhaustivas.</li>
-                    </ol>
-                    <button class="btn">Seleccionar</button>
-                </div>
-                <div class="producto">
-                    <div class="servicio">Mantenimiento y Actualización de Sitios Web</div>
-                    <h2></h2>
-                    <ol>
-                        <li> Servicios de mantenimiento y actualización para sitios web existentes.</li>
-                        <li> Corrección de errores, optimización de rendimiento, actualización de contenido.</li>
-                        <li> Aplicación de parches de seguridad y la integración de nuevas características.</li>
-                    </ol>
-                    <button class="btn">Seleccionar</button>
-                </div>
+            </div>
+            <div class="producto">
+                <div class="servicio">Desarrollo de una Aplicación Web Personalizada</div>
+                <h2> $5,000 </h2>
+                <ol>
+                    <li> Diseño de la arquitectura.</li>
+                    <li> Programación del front-end y el back-end.</li>
+                    <li> Implementación de bases de datos, seguridad y pruebas exhaustivas.</li>
+                </ol>
+                <button class="btn">Seleccionar</button>
+            </div>
+            <div class="producto">
+                <div class="servicio">Mantenimiento y Actualización de Sitios Web</div>
+                <h2>$1,000</h2>
+                <ol>
+                    <li> Servicios de mantenimiento y actualización para sitios web existentes.</li>
+                    <li> Corrección de errores, optimización de rendimiento, actualización de contenido.</li>
+                    <li> Aplicación de parches de seguridad y la integración de nuevas características.</li>
+                </ol>
+                <button class="btn">Seleccionar</button>
+            </div>
             </div>
         </section>
         <footer>
