--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -89,7 +89,7 @@
         </section>
         <section id="precios">
             <div class="producto">
-                <div class="servicio">Desarrollo de un Sitio Web Empresarial</div>
+                <div class="servicio"><p>Desarrollo de un Sitio Web Empresarial</p></div>
                 <h2> $700</h2>
                 <ol>
                     <li> Un sitio web profesional y totalmente funcional para tu empresa o negocio.</li>
@@ -101,7 +101,7 @@
                 <button class="btn">Seleccionar</button>
             </div>
             <div class="producto">
-                <div class="servicio">Desarrollo de una Aplicación Web Personalizada</div>
+                <div class="servicio"><p>Desarrollo de una Aplicación Web Personalizada</p></div>
                 <h2> $5,000 </h2>
                 <ol>
                     <li> Diseño de la arquitectura.</li>
@@ -111,7 +111,7 @@
                 <button class="btn">Seleccionar</button>
             </div>
             <div class="producto">
-                <div class="servicio">Mantenimiento y Actualización de Sitios Web</div>
+                <div class="servicio"><p>Mantenimiento y Actualización de Sitios Web</p></div>
                 <h2>$1,000</h2>
                 <ol>
                     <li> Servicios de mantenimiento y actualización para sitios web existentes.</li>
