--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -124,9 +124,9 @@
         </section>
         <footer>
             <ul>
-                <li>Privasidad</li>
-                <li>Terminos</li>
-                <li>Contacto</li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">Privasidad</a></li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">Terminos</a></li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">Contacto</a></li>
             </ul>
             <span>Propiedad RasQuokka</span>
         </footer>
